# ncnn-portrait-segmentation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  ERDNet.cc  ERDNet.h  main.cc  timer.h
third_parties/: CMakeLists.txt
